Updated API to allow an invoice to have multiple facilityIds. Reworked the fetch logic to support pagination even though one invoice might have multiple rows in the new version of the vInvoice view. Updated app-tests to ensure proper functionality. New major version.
